<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@android:color/white"
            android:minHeight="?attr/actionBarSize"
            android:elevation="0dp"
            android:theme="@style/AppTheme.PopupOverlay">

            <!--            <de.hdodenhof.circleimageview.CircleImageView-->
            <!--                android:layout_width="50dp"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:src="@drawable/logo"-->
            <!--                android:padding="8dp"-->
            <!--                android:id="@+id/circle_imageView"/>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </RelativeLayout>



            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/app_title"-->
            <!--                android:textSize="17sp"-->
            <!--                android:gravity="center_vertical"-->
            <!--                android:fontFamily="@font/product_sans_regular"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                />-->
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="30dp"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/mainRoot"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <!-- TODO: Update blank fragment layout -->

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/bannerSlider"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:layout_margin="8sp"
                        android:padding="5sp"/>

                    <com.google.android.material.tabs.TabLayout
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginVertical="5dp"
                        android:animateLayoutChanges="true"
                        android:id="@+id/view_pager_indicator"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_height="5dp"
                        app:tabBackground="@drawable/indicator_selector"
                        app:tabMode="fixed"
                        app:tabIndicatorHeight="0dp" />



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal">

                        <TextView
                            android:fontFamily="@font/product_sans_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/expsports_watch_live_sports"
                            android:id="@+id/homeMsg"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="#FF000000"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:background="@color/black"
                            android:layout_marginLeft="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/product_sans_bold"
                            android:text="@string/special_package"
                            android:textSize="@dimen/album_title"
                            android:textStyle="bold" />
                        <androidx.cardview.widget.CardView
                            android:id="@+id/catMore"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_margin="3dp"
                            card_view:cardCornerRadius="@dimen/card_album_radius">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_more"/>
                        </androidx.cardview.widget.CardView>


                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/catRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_marginEnd="7dp"
                            android:layout_marginBottom="7dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:background="@color/black"
                            android:layout_marginLeft="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/product_sans_bold"
                            android:text="@string/live_channels"
                            android:textSize="@dimen/album_title"
                            android:textStyle="bold" />
                        <androidx.cardview.widget.CardView
                            android:id="@+id/eventMore"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_margin="3dp"
                            card_view:cardCornerRadius="@dimen/card_album_radius">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_more"/>
                        </androidx.cardview.widget.CardView>


                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/eventRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_marginTop="7dp"
                            android:layout_marginEnd="7dp"
                            android:layout_marginBottom="7dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:background="@color/black"
                            android:layout_marginLeft="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/live_sports"
                            android:textSize="@dimen/album_title"
                            android:fontFamily="@font/product_sans_bold"
                            android:layout_marginLeft="20dp"
                            android:textStyle="bold"/>
                        <androidx.cardview.widget.CardView
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_margin="3dp"
                            android:id="@+id/liveMore"
                            card_view:cardCornerRadius="@dimen/card_album_radius">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_more"/>
                        </androidx.cardview.widget.CardView>


                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/liveRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_marginTop="7dp"
                            android:layout_marginEnd="7dp"
                            android:layout_marginBottom="7dp" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            android:layout_centerInParent="true"
            style="@style/SpinKitView.Large.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/black" />
    </RelativeLayout>

</LinearLayout>